<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hitungTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/tip_calculator"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/bill"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/jumlahBill"
        app:layout_constraintStart_toStartOf="@+id/persentaseTip"
        app:layout_constraintTop_toTopOf="@+id/jumlahBill" />

    <EditText
        android:id="@+id/jumlahBill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="76dp"
        android:ems="15"
        android:fontFamily="@font/bebas_neue"
        android:hint="Jumlah Harga"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bill"
        app:layout_constraintTop_toBottomOf="@+id/hitungTip"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/persentaseTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/persentase_tip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seekBarTip" />

    <SeekBar
        android:id="@+id/seekBarTip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:max="30"
        app:layout_constraintStart_toEndOf="@+id/bill"
        app:layout_constraintTop_toBottomOf="@+id/jumlahBill" />

    <TextView
        android:id="@+id/persen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/bebas_neue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bill"
        tools:text="24%" />

    <View
        android:id="@+id/divider"
        android:layout_width="360dp"
        android:layout_height="2dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/jumlahTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/persentaseTip" />

    <TextView
        android:id="@+id/jumlahTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/jumlahTip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/hasilJumlahTip"
        app:layout_constraintStart_toStartOf="@+id/persentaseTip"
        app:layout_constraintTop_toTopOf="@+id/hasilJumlahTip" />

    <TextView
        android:id="@+id/totalHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/totalHarga"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/hasilTotalHarga"
        app:layout_constraintStart_toStartOf="@+id/bill"
        app:layout_constraintTop_toTopOf="@+id/hasilTotalHarga" />

    <TextView
        android:id="@+id/hasilJumlahTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/bebas_neue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/jumlahBill"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="19.96" />

    <TextView
        android:id="@+id/hasilTotalHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/bebas_neue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/jumlahBill"
        app:layout_constraintTop_toBottomOf="@+id/hasilJumlahTip"
        tools:text="103.11" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hitung_button"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/jumlahBill"
        app:layout_constraintTop_toBottomOf="@+id/seekBarTip" />

</androidx.constraintlayout.widget.ConstraintLayout>